--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,23 @@ geopy==2.4.1
 pycountry==23.12.11
 dateparser==1.2.0
 wordcloud==1.9.2
+
+# NEW: Predictive Analytics & Machine Learning
+statsmodels==0.14.1
+prophet==1.1.5
+xgboost==2.0.3
+lightgbm==4.3.0
+tensorflow==2.15.0
+keras==2.15.0
+joblib==1.3.2
+seaborn==0.13.2
+
+# NEW: Time Series & Forecasting
+pmdarima==2.0.4
+seasonal==0.3.1
+tsfresh==0.20.0
+
+# NEW: Advanced Statistical Analysis
+scipy==1.12.0
+matplotlib==3.8.3
+plotly-express==0.4.1
